--- a/.env
+++ b/.env
@@ -51,8 +51,8 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 PUSHER_APP_ID=socketid
 PUSHER_APP_KEY=socketkey
 PUSHER_APP_SECRET=socketsecret
-PUSHER_HOST=127.0.0.1
-PUSHER_PORT=6001
+#PUSHER_HOST=127.0.0.1
+#PUSHER_PORT=6001
 #PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
 
