--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/tinker": "^2.7",
         "mongodb/laravel-mongodb": "^3.8.0",
         "php-open-source-saver/jwt-auth": "^2.2",
-        "pusher/pusher-php-server": "^7.2"
+        "pusher/pusher-php-server": "^7.2",
+        "react/promise": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
